--- a/app/public/styles/_config.scss
+++ b/app/public/styles/_config.scss
@@ -9,3 +9,6 @@ $button-active-color: #4c4773;
 
 $cursor-color: $complement-color;
 $cursor-opacity: .5;
+
+$base-font-size: 2em;
+$base-line-height: 1em;
