--- a/app/public/styles/components/_button.scss
+++ b/app/public/styles/components/_button.scss
@@ -1,7 +1,7 @@
 .btn {
   background-color: $button-background-color;
   border: 15px solid;
-  font-size: 3.5em;
+  font-size: 2em;
   font-weight: bold;
   margin: 0 auto;
   text-transform: uppercase;
