--- a/app/public/styles/components/_text.scss
+++ b/app/public/styles/components/_text.scss
@@ -3,12 +3,22 @@
 html {
   color: $text-color;
   font-family: Roboto, sans-serif;
+  font-size: $base-font-size;
   text-transform: uppercase;
 }
 
 h1, .h1 {
-  font-size: 3em;
+  font-size: $base-font-size;
   font-weight: 300;
+  line-height: $base-line-height;
   margin: 0;
+  text-align: center;
+}
+
+p {
+  margin: 0;
+}
+
+.text-center {
   text-align: center;
 }
